stopped the scrollbars from appearing when the image spins

--- a/main.css
+++ b/main.css
@@ -4,6 +4,8 @@
 
 body {
     background:var(--bg);
+
+    overflow:hidden;
 }
 
 .footer {
@@ -12,6 +14,7 @@ body {
 }
 
 .spin img {
+
     border-radius: 50%;
     -webkit-transition: -webkit-transform 1.5s;
     transition: transform 1.5s;
